# TopFFmpeg

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/top/topffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: common.h  ffmpeg-main.cpp  main.cpp  sound_paly.cpp
app/src/main/java/com/top/topffmpeg/: MainActivity.java
app/src/main/java/com/top/topffmpeg/activity/: MainActivity.java  SecondActivity.java  ThirdActivity.java
app/src/main/java/com/top/topffmpeg/nativ/: PosixThread.java
app/src/main/java/com/top/topffmpeg/utils/: UUIDUtils.java
app/src/main/res/layout/: activity_main.xml  activity_second.xml  activity_third.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/top/topffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
